cambie la avenida
en vez de avenida corrientes, la cambie por cordoba en el header.

--- a/inicio.html
+++ b/inicio.html
@@ -18,7 +18,7 @@
 					 <a class="icono_address" ><img src="icono_tlf.png" alt="Telefono" width="40" height="40" /></a>
 					  <li><h3 class="lista_address">Tlf: 11 4444 6666</h3></li>
 					  <a class="icono_address"><img src="icono_ubicacion.png" alt="Ubicacion" width="40" height="40" /></a>
-					  <li> <h3 class="lista_address">Av. Corrientes 1234</h3></li>
+					  <li> <h3 class="lista_address">Av. Cordoba 1234</h3></li>
 					  <a class="icono_address"><img src="icono_mail.png" alt="Correo" width="40" height="40" /></a>
 					  <li><h3 class="lista_address">Abbulrodriguez@hotmail.com</h3></li>
 				</ul>
